--- a/src/index.scss
+++ b/src/index.scss
@@ -1,14 +1,27 @@
+div#root {
+  height: 100vh; /* remove this line to see div.app is no more 100% height */
+
+}
 body {
+  height: 100vh;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: 100vh;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+li {
+  padding: 8px!important;
+  a {
+    div {
+      padding: 0!important;
+    }
+  }
 }
